Fix h spacing of logout button.

--- a/frontend/src/components/common/AuthNavItem.module.scss
+++ b/frontend/src/components/common/AuthNavItem.module.scss
@@ -5,7 +5,6 @@
   button {
     padding-left: 0;
     width: 21px !important;
-    height: $navBarHeight !important;
     background-color: currentColor !important;
     background-repeat: no-repeat;
     mask-image: url("/images/icons/logout.svg");
